...
            android:paddingHorizontal="40dp"
            android:paddingVertical="20dp"
            tools:targetApi="o"/>


    <Button
            android:id="@+id/button_start_quiz"
            android:text="@string/start_quizButton"
            android:textColor="#FFFFFFFF"
            android:textSize="30sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
...
            android:paddingHorizontal="30sp"
            android:paddingVertical="10sp"
            tools:targetApi="o"
            android:layout_centerVertical="true"
    />
    <Button
            android:id="@+id/button_start_flashcard"
            android:text="@string/start_flashCard"
            android:textColor="#FFFFFFFF"
            android:textSize="30sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonshape"
...
