<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"


        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:padding="16dp"
        tools:context=".QuizActivity">

    <TextView
            android:id="@+id/text_view_highscore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Najwyższy wynik: 0"
            android:textColor="@color/colorFont"
    />

    <TextView
            android:id="@+id/text_view_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Score: 0"
            android:textColor="@color/colorFont"
            android:layout_below="@id/text_view_highscore"
    />

    <TextView
            android:id="@+id/text_view_countdown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="00:30"
            android:textColor="@android:color/black"
            android:textSize="40sp" />


    <TextView
            android:id="@+id/text_view_question_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Question: 1/x"
            android:textColor="@color/colorFont"
            android:layout_below="@id/text_view_score"

    />


    <TextView
            android:id="@+id/text_view_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Tu będzie pytanie"
            android:textSize="20sp"
            android:textColor="@color/colorFont"
            android:layout_marginBottom="16dp"
            android:textAlignment="center"
            android:layout_above="@id/radio_group"
    />

    <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="bottom"
            android:layout_above="@id/button_confirm_next"
            android:layout_marginBottom="50dp"
    >

        <RadioButton
                android:id="@+id/radio_button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorFont"
                android:text="Option 1"
        />

        <RadioButton
                android:id="@+id/radio_button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorFont"
                android:text="Option 2"
        />

        <RadioButton
                android:id="@+id/radio_button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorFont"
                android:text="Option 3"
        />
    </RadioGroup>




    <Button
            android:id="@+id/button_confirm_next"
            android:text="@string/next_question_button"
            android:layout_width= "match_parent"
            android:layout_height= "wrap_content"
            android:layout_alignParentBottom= "true"
            android:gravity= "center"
            android:background="@drawable/buttonshape"
            android:textColor="@color/colorFont"
            android:layout_marginTop="30dp"
    />


</RelativeLayout>
